Update contact email link in index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </p>
           <div class="cta">
             <a class="btn primary" href="#products">View products</a>
-            <a class="btn" href="mailto:admin@quietforgestudio.org">Contact</a>
+            <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
           </div>
         </div>
       </div>
