Add privacy policy to privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,128 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Privacy Policy • Quiet Forge Studio</title>
+  <meta name="description" content="Privacy Policy for Quiet Forge Studio apps and services." />
+  <meta name="theme-color" content="#0b0c0f" />
+  <style>
+    :root { color-scheme: dark; }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#0b0c0f;color:#e9e9ee}
+    a{color:#f2ead2;text-decoration:none;border-bottom:1px dotted #3a3d49}
+    .wrap{max-width:900px;margin:0 auto;padding:56px 20px}
+    h1{margin:0 0 10px;font-size:36px;letter-spacing:-.02em;color:#f2ead2}
+    p,li{color:#c9cad4;line-height:1.75}
+    .meta{color:#9b9dac;font-size:13px;margin:8px 0 24px}
+    .card{border:1px solid #2a2c35;border-radius:18px;padding:18px;background:rgba(255,255,255,.02);margin:14px 0}
+    .nav{display:flex;gap:14px;flex-wrap:wrap;margin:0 0 18px}
+    .nav a{border:1px solid #2a2c35;border-bottom:none;border-radius:12px;padding:8px 12px;color:#e9e9ee;background:rgba(255,255,255,.02)}
+    footer{margin-top:36px;padding-top:18px;border-top:1px solid #2a2c35;color:#9b9dac;font-size:13px}
+  </style>
+</head>
+<body>
+  <main class="wrap">
+    <div class="nav">
+      <a href="/">Home</a>
+      <a href="/terms.html">Terms</a>
+      <a href="mailto:admin@quietforgestudio.org">Contact</a>
+    </div>
+
+    <h1>Privacy Policy</h1>
+    <div class="meta">
+      Effective date: <strong>2025-12-18</strong> • Quiet Forge Studio (“we”, “our”)
+    </div>
+
+    <div class="card">
+      <p>
+        Quiet Forge Studio builds calm, purposeful apps and tools. This Privacy Policy explains what information we
+        collect (if any), how we use it, and your choices.
+      </p>
+    </div>
+
+    <h2>Information we collect</h2>
+    <div class="card">
+      <p><strong>We do not require an account</strong> to use our apps.</p>
+      <ul>
+        <li><strong>Information you provide:</strong> If you email us, we receive your email address and the content of your message.</li>
+        <li><strong>App data stored on your device:</strong> Some apps may store settings locally on your device (e.g., timer preferences). This data stays on your device unless you delete the app or clear storage.</li>
+        <li><strong>Analytics:</strong> If we enable analytics in an app, it will be used only to understand crashes and basic usage trends. When enabled, this may collect device/app identifiers and event data. We aim to keep analytics minimal.</li>
+      </ul>
+    </div>
+
+    <h2>How we use information</h2>
+    <div class="card">
+      <ul>
+        <li>To respond to support requests and emails.</li>
+        <li>To improve reliability (e.g., crash diagnostics) and understand what features are useful.</li>
+        <li>To maintain security and prevent abuse.</li>
+      </ul>
+    </div>
+
+    <h2>Sharing of information</h2>
+    <div class="card">
+      <p>
+        We do not sell your personal information. We may share limited information only:
+      </p>
+      <ul>
+        <li>With service providers used for app distribution and operations (e.g., Google Play, Apple App Store, crash reporting), if enabled.</li>
+        <li>To comply with legal obligations or protect our rights and users.</li>
+      </ul>
+    </div>
+
+    <h2>Third-party services</h2>
+    <div class="card">
+      <p>
+        Our apps may rely on third-party platforms (e.g., app stores) that have their own privacy policies.
+        If an app includes optional third-party analytics or crash reporting, that provider may collect data under their policy.
+      </p>
+    </div>
+
+    <h2>Data retention</h2>
+    <div class="card">
+      <ul>
+        <li>Emails you send us may be retained as long as needed to provide support and keep records.</li>
+        <li>Crash/analytics data (if enabled) is retained according to the provider’s retention settings.</li>
+      </ul>
+    </div>
+
+    <h2>Your choices</h2>
+    <div class="card">
+      <ul>
+        <li>You can stop all collection by uninstalling the app.</li>
+        <li>If analytics is offered as an in-app toggle (future), you can disable it.</li>
+        <li>You may contact us to request deletion of emails/support conversations.</li>
+      </ul>
+    </div>
+
+    <h2>Children’s privacy</h2>
+    <div class="card">
+      <p>
+        Our apps are not directed to children under 13. If you believe a child provided us personal information, contact us and we will delete it.
+      </p>
+    </div>
+
+    <h2>Changes to this policy</h2>
+    <div class="card">
+      <p>
+        We may update this policy from time to time. We will revise the “Effective date” above when changes are made.
+      </p>
+    </div>
+
+    <h2>Contact</h2>
+    <div class="card">
+      <p>
+        Email: <a href="mailto:admin@quietforgestudio.org">admin@quietforgestudio.org</a>
+      </p>
+    </div>
+
+    <footer>
+      © <span id="y"></span> Quiet Forge Studio
+    </footer>
+  </main>
+
+  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+</body>
+</html>
 
