--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,116 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Terms of Use • Quiet Forge Studio</title>
+  <meta name="description" content="Terms of Use for Quiet Forge Studio apps and services." />
+  <meta name="theme-color" content="#0b0c0f" />
+  <style>
+    :root { color-scheme: dark; }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#0b0c0f;color:#e9e9ee}
+    a{color:#f2ead2;text-decoration:none;border-bottom:1px dotted #3a3d49}
+    .wrap{max-width:900px;margin:0 auto;padding:56px 20px}
+    h1{margin:0 0 10px;font-size:36px;letter-spacing:-.02em;color:#f2ead2}
+    p,li{color:#c9cad4;line-height:1.75}
+    .meta{color:#9b9dac;font-size:13px;margin:8px 0 24px}
+    .card{border:1px solid #2a2c35;border-radius:18px;padding:18px;background:rgba(255,255,255,.02);margin:14px 0}
+    .nav{display:flex;gap:14px;flex-wrap:wrap;margin:0 0 18px}
+    .nav a{border:1px solid #2a2c35;border-bottom:none;border-radius:12px;padding:8px 12px;color:#e9e9ee;background:rgba(255,255,255,.02)}
+    footer{margin-top:36px;padding-top:18px;border-top:1px solid #2a2c35;color:#9b9dac;font-size:13px}
+  </style>
+</head>
+<body>
+  <main class="wrap">
+    <div class="nav">
+      <a href="/">Home</a>
+      <a href="/privacy.html">Privacy</a>
+      <a href="mailto:admin@quietforgestudio.org">Contact</a>
+    </div>
+
+    <h1>Terms of Use</h1>
+    <div class="meta">
+      Effective date: <strong>2025-12-18</strong> • Quiet Forge Studio (“we”, “our”)
+    </div>
+
+    <div class="card">
+      <p>
+        These Terms govern your use of Quiet Forge Studio websites, apps, and related services (“Services”).
+        By using the Services, you agree to these Terms.
+      </p>
+    </div>
+
+    <h2>Use of the Services</h2>
+    <div class="card">
+      <ul>
+        <li>You may use the Services for personal, lawful purposes.</li>
+        <li>You agree not to misuse the Services, attempt unauthorized access, or interfere with operation.</li>
+        <li>Some features may change or be discontinued as we improve the product.</li>
+      </ul>
+    </div>
+
+    <h2>Content and intellectual property</h2>
+    <div class="card">
+      <p>
+        The Services, including design, logos, and content, are owned by Quiet Forge Studio or licensors and are protected by applicable laws.
+        You may not copy, modify, distribute, or reverse engineer the Services except where permitted by law.
+      </p>
+    </div>
+
+    <h2>Third-party services</h2>
+    <div class="card">
+      <p>
+        The Services may integrate with third-party platforms (e.g., app stores). Your use of those services is governed by their terms and policies.
+      </p>
+    </div>
+
+    <h2>Disclaimer</h2>
+    <div class="card">
+      <p>
+        The Services are provided “as is” and “as available.” We do not guarantee the Services will be uninterrupted or error-free.
+        Quiet Forge Studio is not responsible for decisions you make based on the Services.
+      </p>
+      <p>
+        <strong>Not medical advice:</strong> If any app relates to wellness or meditation, it is for general informational and personal practice support only and does not replace professional medical advice.
+      </p>
+    </div>
+
+    <h2>Limitation of liability</h2>
+    <div class="card">
+      <p>
+        To the maximum extent permitted by law, Quiet Forge Studio will not be liable for indirect, incidental, special, consequential, or punitive damages,
+        or any loss of data, profits, or goodwill arising from your use of the Services.
+      </p>
+    </div>
+
+    <h2>Termination</h2>
+    <div class="card">
+      <p>
+        You may stop using the Services at any time. We may suspend or terminate access if you violate these Terms or misuse the Services.
+      </p>
+    </div>
+
+    <h2>Changes to these Terms</h2>
+    <div class="card">
+      <p>
+        We may update these Terms from time to time. We will revise the “Effective date” above when changes are made.
+      </p>
+    </div>
+
+    <h2>Contact</h2>
+    <div class="card">
+      <p>
+        Email: <a href="mailto:admin@quietforgestudio.org">admin@quietforgestudio.org</a>
+      </p>
+    </div>
+
+    <footer>
+      © <span id="y"></span> Quiet Forge Studio
+    </footer>
+  </main>
+
+  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+</body>
+</html>
 
