--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
         <span>© <span id="y"></span> Quiet Forge Studio</span>
         <span>
           <a href="#products">Products</a> ·
-          <a href="mailto:admin@quietforgestudio.org">Contact</a>
+              <a href="/privacy.html">Privacy</a> ·
+              <a href="/terms.html">Terms</a> ·
+          <a href="mailto:support@quietforgestudio.org">Contact</a>
         </span>
       </footer>
     </div>
