Update contact email from admin to support

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <p>
             For partnerships, feedback, or press:
             <br /><br />
-            <a href="mailto:admin@quietforgestudio.org">admin@quietforgestudio.org</a>
+            <a href="mailto:support@quietforgestudio.org">support@quietforgestudio.org</a>
           </p>
         </div>
       </section>
