--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
           <div class="cta">
             <a class="btn primary" href="#products">View products</a>
             <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
+            <a href="/privacy.html">Privacy</a>
+            <a href="/terms.html">Terms</a> 
           </div>
         </div>
       </div>
@@ -242,8 +244,8 @@
         <span>© <span id="y"></span> Quiet Forge Studio</span>
         <span>
           <a href="#products">Products</a> ·
-              <a href="/privacy.html">Privacy</a> ·
-              <a href="/terms.html">Terms</a> ·
+          <a href="/privacy.html">Privacy</a> ·
+          <a href="/terms.html">Terms</a> ·
           <a href="mailto:support@quietforgestudio.org">Contact</a>
         </span>
       </footer>
