--- a/index.html
+++ b/index.html
@@ -6,25 +6,31 @@
   <title>Quiet Forge Studio</title>
   <meta name="description" content="Quiet Forge Studio builds calm, purposeful apps and tools—crafted with clarity, simplicity, and respect for attention." />
   <meta name="theme-color" content="#0b0c0f" />
+
   <style>
     :root { color-scheme: dark; }
     * { box-sizing: border-box; }
+
     body {
       margin: 0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
       background: #0b0c0f;
       color: #e9e9ee;
     }
+
     a { color: inherit; text-decoration: none; }
 
-    .wrap { max-width: 1040px; margin: 0 auto; padding: 0 20px; }
+    .wrap {
+      max-width: 1040px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
 
-    /* HERO with your banner */
+    /* HERO */
     .hero {
-      position: relative;
       padding: 72px 0 56px;
       background:
-        linear-gradient(180deg, rgba(11,12,15,0.35) 0%, rgba(11,12,15,0.85) 70%, #0b0c0f 100%),
+        linear-gradient(180deg, rgba(11,12,15,0.35), rgba(11,12,15,0.85) 70%, #0b0c0f),
         url("assets/header2.jpg");
       background-size: cover;
       background-position: center;
@@ -33,12 +39,11 @@
 
     .top {
       display: flex;
-      align-items: center;
       gap: 18px;
+      align-items: center;
       flex-wrap: wrap;
     }
 
-    /* Logo */
     .logo {
       width: 72px;
       height: 72px;
@@ -46,13 +51,12 @@
       overflow: hidden;
       border: 1px solid rgba(255,255,255,0.14);
       background: rgba(0,0,0,0.25);
-      flex: 0 0 auto;
     }
+
     .logo img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
     }
 
     .badge {
@@ -60,56 +64,71 @@
       align-items: center;
       gap: 8px;
       padding: 6px 10px;
-      border: 1px solid rgba(255,255,255,0.14);
       border-radius: 999px;
+      border: 1px solid rgba(255,255,255,0.14);
+      background: rgba(0,0,0,0.28);
       font-size: 13px;
       color: #e7e2cf;
-      width: fit-content;
-      background: rgba(0,0,0,0.28);
-      backdrop-filter: blur(6px);
+      margin-bottom: 6px;
     }
-    .dot { width: 7px; height: 7px; border-radius: 999px; background: #8ff0a4; display: inline-block; }
+
+    .dot {
+      width: 7px;
+      height: 7px;
+      border-radius: 999px;
+      background: #8ff0a4;
+    }
 
     h1 {
       font-size: 48px;
-      line-height: 1.06;
       margin: 10px 0 0;
       letter-spacing: -0.03em;
       color: #f2ead2;
-      text-shadow: 0 10px 30px rgba(0,0,0,0.55);
     }
 
     .lead {
-      margin: 16px 0 0;
+      margin-top: 14px;
       font-size: 18px;
-      line-height: 1.75;
-      color: rgba(242,234,210,0.86);
+      line-height: 1.7;
       max-width: 62ch;
-      text-shadow: 0 10px 30px rgba(0,0,0,0.55);
+      color: rgba(242,234,210,0.85);
     }
 
-    .cta { margin-top: 22px; display: flex; gap: 12px; flex-wrap: wrap; }
-    .btn {
-      display: inline-flex;
+    /* CTA BUTTONS */
+    .cta {
+      margin-top: 22px;
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
       align-items: center;
-      justify-content: center;
-      padding: 11px 14px;
+    }
+
+    .btn {
+      padding: 11px 16px;
       border-radius: 14px;
       border: 1px solid rgba(255,255,255,0.14);
       background: rgba(0,0,0,0.28);
-      color: #f2ead2;
       font-size: 14px;
+      color: #f2ead2;
       backdrop-filter: blur(6px);
     }
+
     .btn.primary {
       background: #f2ead2;
       color: #0b0c0f;
       border-color: #f2ead2;
     }
-    .btn:hover { transform: translateY(-1px); transition: 120ms ease; }
 
-    /* Content sections */
-    .content { padding: 54px 0 72px; }
+    .btn:hover {
+      transform: translateY(-1px);
+      transition: 120ms ease;
+    }
+
+    /* CONTENT */
+    .content {
+      padding: 54px 0 72px;
+    }
+
     .section-title {
       margin: 40px 0 14px;
       font-size: 14px;
@@ -117,39 +136,47 @@
       text-transform: uppercase;
       color: #9b9dac;
     }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 14px;
     }
+
     .card {
       border: 1px solid #2a2c35;
       border-radius: 18px;
       padding: 18px;
       background: rgba(255,255,255,0.02);
     }
-    .card h3 { margin: 0 0 6px; font-size: 18px; color: #e9e9ee; }
-    .card p { margin: 0; font-size: 15px; line-height: 1.7; color: #c9cad4; }
+
+    .card h3 {
+      margin: 0 0 6px;
+      font-size: 18px;
+    }
+
+    .card p {
+      margin: 0;
+      font-size: 15px;
+      line-height: 1.7;
+      color: #c9cad4;
+    }
+
     .meta {
       margin-top: 12px;
-      display: inline-flex;
+      display: flex;
       gap: 10px;
-      flex-wrap: wrap;
       font-size: 12px;
       color: #9b9dac;
+      flex-wrap: wrap;
     }
+
     .pill {
       padding: 5px 9px;
       border-radius: 999px;
       border: 1px solid #2a2c35;
       background: rgba(255,255,255,0.01);
     }
-    .about {
-      display: grid;
-      grid-template-columns: 1.2fr .8fr;
-      gap: 14px;
-    }
-    @media (max-width: 860px) { .about { grid-template-columns: 1fr; } h1{font-size:40px;} }
 
     footer {
       margin-top: 56px;
@@ -162,27 +189,40 @@
       font-size: 13px;
       color: #9b9dac;
     }
-    footer a { color: #c9cad4; border-bottom: 1px dotted #3a3d49; }
+
+    footer a {
+      color: #c9cad4;
+      border-bottom: 1px dotted #3a3d49;
+    }
+
+    @media (max-width: 860px) {
+      h1 { font-size: 40px; }
+    }
   </style>
 </head>
+
 <body>
   <header class="hero">
     <div class="wrap">
       <div class="top">
-        <div class="logo" aria-label="Quiet Forge Studio logo">
-          <img src="assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
+        <div class="logo">
+          <img src="assets/logo-512.jpg" alt="Quiet Forge Studio logo">
         </div>
+
         <div>
           <span class="badge"><span class="dot"></span> Independent studio • Toronto</span>
           <h1>Quiet Forge Studio</h1>
           <p class="lead">
-            We build calm, purposeful apps and tools—crafted with clarity, simplicity, and respect for attention.
+            We build calm, purposeful apps and tools—crafted with clarity, simplicity,
+            and respect for attention.
           </p>
+
+          <!-- UPDATED CTA -->
           <div class="cta">
             <a class="btn primary" href="#products">View products</a>
             <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
-            <a href="/privacy.html">Privacy</a>
-            <a href="/terms.html">Terms</a> 
+            <a class="btn" href="/privacy.html">Privacy</a>
+            <a class="btn" href="/terms.html">Terms</a>
           </div>
         </div>
       </div>
@@ -192,58 +232,39 @@
   <main class="content">
     <div class="wrap">
       <div class="section-title" id="products">Products</div>
-      <section class="grid" aria-label="Products">
+
+      <section class="grid">
         <article class="card">
           <h3>Mantramala</h3>
           <p>Daily mantra counter & timer—minimal, focused, and designed for practice.</p>
           <div class="meta">
-            <span class="pill">Status: Live</span>
+            <span class="pill">Live</span>
             <span class="pill">Android</span>
           </div>
         </article>
 
         <article class="card">
           <h3>MantraRise</h3>
-          <p>Wake with mantra—gentle routines to start the day with clarity. (Coming soon)</p>
+          <p>Wake with mantra—gentle routines to start the day with clarity.</p>
           <div class="meta">
-            <span class="pill">Status: In progress</span>
+            <span class="pill">In progress</span>
             <span class="pill">Android / iOS</span>
           </div>
         </article>
 
         <article class="card">
           <h3>Watch Faces</h3>
-          <p>Mechanical-inspired Pixel watch faces with a premium, restrained aesthetic. (Exploring)</p>
+          <p>Mechanical-inspired Pixel watch faces with a premium, restrained aesthetic.</p>
           <div class="meta">
-            <span class="pill">Status: Exploring</span>
+            <span class="pill">Exploring</span>
             <span class="pill">Wear OS</span>
           </div>
         </article>
       </section>
 
-      <div class="section-title">About</div>
-      <section class="about" aria-label="About">
-        <div class="card">
-          <h3>Built with intention</h3>
-          <p>
-            Quiet Forge Studio is an independent product studio focused on simple tools that feel good to use.
-            We favor clarity over complexity, and quiet confidence over noise.
-          </p>
-        </div>
-        <div class="card">
-          <h3>Get in touch</h3>
-          <p>
-            For partnerships, feedback, or press:
-            <br /><br />
-            <a href="mailto:support@quietforgestudio.org">support@quietforgestudio.org</a>
-          </p>
-        </div>
-      </section>
-
       <footer>
         <span>© <span id="y"></span> Quiet Forge Studio</span>
         <span>
-          <a href="#products">Products</a> ·
           <a href="/privacy.html">Privacy</a> ·
           <a href="/terms.html">Terms</a> ·
           <a href="mailto:support@quietforgestudio.org">Contact</a>
