--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,7 +14,7 @@
 
     body {
       margin: 0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
       background: #0b0c0f;
       color: #e9e9ee;
     }
@@ -28,9 +29,10 @@
 
     /* HERO */
     .hero {
+      position: relative;
       padding: 72px 0 56px;
       background:
-        linear-gradient(180deg, rgba(11,12,15,0.35), rgba(11,12,15,0.85) 70%, #0b0c0f),
+        linear-gradient(180deg, rgba(11,12,15,0.35) 0%, rgba(11,12,15,0.85) 70%, #0b0c0f 100%),
         url("assets/header2.jpg");
       background-size: cover;
       background-position: center;
@@ -39,11 +41,12 @@
 
     .top {
       display: flex;
-      gap: 18px;
       align-items: center;
+      gap: 18px;
       flex-wrap: wrap;
     }
 
+    /* Logo */
     .logo {
       width: 72px;
       height: 72px;
@@ -51,12 +54,13 @@
       overflow: hidden;
       border: 1px solid rgba(255,255,255,0.14);
       background: rgba(0,0,0,0.25);
+      flex: 0 0 auto;
     }
-
     .logo img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      display: block;
     }
 
     .badge {
@@ -64,34 +68,32 @@
       align-items: center;
       gap: 8px;
       padding: 6px 10px;
-      border-radius: 999px;
       border: 1px solid rgba(255,255,255,0.14);
-      background: rgba(0,0,0,0.28);
+      border-radius: 999px;
       font-size: 13px;
       color: #e7e2cf;
-      margin-bottom: 6px;
+      width: fit-content;
+      background: rgba(0,0,0,0.28);
+      backdrop-filter: blur(6px);
     }
-
-    .dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: #8ff0a4;
-    }
+    .dot { width: 7px; height: 7px; border-radius: 999px; background: #8ff0a4; display: inline-block; }
 
     h1 {
       font-size: 48px;
+      line-height: 1.06;
       margin: 10px 0 0;
       letter-spacing: -0.03em;
       color: #f2ead2;
+      text-shadow: 0 10px 30px rgba(0,0,0,0.55);
     }
 
     .lead {
-      margin-top: 14px;
+      margin: 16px 0 0;
       font-size: 18px;
-      line-height: 1.7;
+      line-height: 1.75;
+      color: rgba(242,234,210,0.86);
       max-width: 62ch;
-      color: rgba(242,234,210,0.85);
+      text-shadow: 0 10px 30px rgba(0,0,0,0.55);
     }
 
     /* CTA BUTTONS */
@@ -104,12 +106,15 @@
     }
 
     .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
       padding: 11px 16px;
       border-radius: 14px;
       border: 1px solid rgba(255,255,255,0.14);
       background: rgba(0,0,0,0.28);
-      font-size: 14px;
       color: #f2ead2;
+      font-size: 14px;
       backdrop-filter: blur(6px);
     }
 
@@ -119,15 +124,10 @@
       border-color: #f2ead2;
     }
 
-    .btn:hover {
-      transform: translateY(-1px);
-      transition: 120ms ease;
-    }
+    .btn:hover { transform: translateY(-1px); transition: 120ms ease; }
 
     /* CONTENT */
-    .content {
-      padding: 54px 0 72px;
-    }
+    .content { padding: 54px 0 72px; }
 
     .section-title {
       margin: 40px 0 14px;
@@ -150,25 +150,16 @@
       background: rgba(255,255,255,0.02);
     }
 
-    .card h3 {
-      margin: 0 0 6px;
-      font-size: 18px;
-    }
-
-    .card p {
-      margin: 0;
-      font-size: 15px;
-      line-height: 1.7;
-      color: #c9cad4;
-    }
+    .card h3 { margin: 0 0 6px; font-size: 18px; color: #e9e9ee; }
+    .card p { margin: 0; font-size: 15px; line-height: 1.7; color: #c9cad4; }
 
     .meta {
       margin-top: 12px;
-      display: flex;
+      display: inline-flex;
       gap: 10px;
+      flex-wrap: wrap;
       font-size: 12px;
       color: #9b9dac;
-      flex-wrap: wrap;
     }
 
     .pill {
@@ -176,6 +167,17 @@
       border-radius: 999px;
       border: 1px solid #2a2c35;
       background: rgba(255,255,255,0.01);
+    }
+
+    /* ABOUT GRID */
+    .about {
+      display: grid;
+      grid-template-columns: 1.2fr .8fr;
+      gap: 14px;
+    }
+    @media (max-width: 860px) {
+      .about { grid-template-columns: 1fr; }
+      h1 { font-size: 40px; }
     }
 
     footer {
@@ -190,13 +192,12 @@
       color: #9b9dac;
     }
 
-    footer a {
-      color: #c9cad4;
-      border-bottom: 1px dotted #3a3d49;
-    }
+    footer a { color: #c9cad4; border-bottom: 1px dotted #3a3d49; }
 
-    @media (max-width: 860px) {
-      h1 { font-size: 40px; }
+    /* Link styling inside cards */
+    .card a {
+      color: #f2ead2;
+      border-bottom: 1px dotted #3a3d49;
     }
   </style>
 </head>
@@ -205,19 +206,17 @@
   <header class="hero">
     <div class="wrap">
       <div class="top">
-        <div class="logo">
-          <img src="assets/logo-512.jpg" alt="Quiet Forge Studio logo">
+        <div class="logo" aria-label="Quiet Forge Studio logo">
+          <img src="assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
         </div>
 
         <div>
           <span class="badge"><span class="dot"></span> Independent studio • Toronto</span>
           <h1>Quiet Forge Studio</h1>
           <p class="lead">
-            We build calm, purposeful apps and tools—crafted with clarity, simplicity,
-            and respect for attention.
+            We build calm, purposeful apps and tools—crafted with clarity, simplicity, and respect for attention.
           </p>
 
-          <!-- UPDATED CTA -->
           <div class="cta">
             <a class="btn primary" href="#products">View products</a>
             <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
@@ -233,33 +232,53 @@
     <div class="wrap">
       <div class="section-title" id="products">Products</div>
 
-      <section class="grid">
+      <section class="grid" aria-label="Products">
         <article class="card">
           <h3>Mantramala</h3>
           <p>Daily mantra counter & timer—minimal, focused, and designed for practice.</p>
           <div class="meta">
-            <span class="pill">Live</span>
+            <span class="pill">Status: Live</span>
             <span class="pill">Android</span>
           </div>
         </article>
 
         <article class="card">
           <h3>MantraRise</h3>
-          <p>Wake with mantra—gentle routines to start the day with clarity.</p>
+          <p>Wake with mantra—gentle routines to start the day with clarity. (Coming soon)</p>
           <div class="meta">
-            <span class="pill">In progress</span>
+            <span class="pill">Status: In progress</span>
             <span class="pill">Android / iOS</span>
           </div>
         </article>
 
         <article class="card">
           <h3>Watch Faces</h3>
-          <p>Mechanical-inspired Pixel watch faces with a premium, restrained aesthetic.</p>
+          <p>Mechanical-inspired Pixel watch faces with a premium, restrained aesthetic. (Exploring)</p>
           <div class="meta">
-            <span class="pill">Exploring</span>
+            <span class="pill">Status: Exploring</span>
             <span class="pill">Wear OS</span>
           </div>
         </article>
+      </section>
+
+      <div class="section-title">About</div>
+      <section class="about" aria-label="About">
+        <div class="card">
+          <h3>Built with intention</h3>
+          <p>
+            Quiet Forge Studio is an independent product studio focused on simple tools that feel good to use.
+            We favor clarity over complexity, and quiet confidence over noise.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Get in touch</h3>
+          <p>
+            For partnerships, feedback, or press:
+            <br /><br />
+            <a href="mailto:support@quietforgestudio.org">support@quietforgestudio.org</a>
+          </p>
+        </div>
       </section>
 
       <footer>
@@ -278,3 +297,4 @@
   </script>
 </body>
 </html>
+```
