--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -96,7 +95,7 @@
       text-shadow: 0 10px 30px rgba(0,0,0,0.55);
     }
 
-    /* CTA BUTTONS */
+    /* CTA */
     .cta {
       margin-top: 22px;
       display: flex;
@@ -108,7 +107,7 @@
     .btn {
       display: inline-flex;
       align-items: center;
-      justify-content: center;
+      gap: 8px;
       padding: 11px 16px;
       border-radius: 14px;
       border: 1px solid rgba(255,255,255,0.14);
@@ -125,6 +124,12 @@
     }
 
     .btn:hover { transform: translateY(-1px); transition: 120ms ease; }
+
+    .store-icon {
+      width: 18px;
+      height: 18px;
+      display: inline-block;
+    }
 
     /* CONTENT */
     .content { padding: 54px 0 72px; }
@@ -169,12 +174,12 @@
       background: rgba(255,255,255,0.01);
     }
 
-    /* ABOUT GRID */
     .about {
       display: grid;
       grid-template-columns: 1.2fr .8fr;
       gap: 14px;
     }
+
     @media (max-width: 860px) {
       .about { grid-template-columns: 1fr; }
       h1 { font-size: 40px; }
@@ -194,7 +199,6 @@
 
     footer a { color: #c9cad4; border-bottom: 1px dotted #3a3d49; }
 
-    /* Link styling inside cards */
     .card a {
       color: #f2ead2;
       border-bottom: 1px dotted #3a3d49;
@@ -206,7 +210,7 @@
   <header class="hero">
     <div class="wrap">
       <div class="top">
-        <div class="logo" aria-label="Quiet Forge Studio logo">
+        <div class="logo">
           <img src="assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
         </div>
 
@@ -219,6 +223,20 @@
 
           <div class="cta">
             <a class="btn primary" href="#products">View products</a>
+
+            <a class="btn"
+               href="https://play.google.com/store/apps/details?id=com.mantramala.timer&hl=en-US"
+               target="_blank"
+               rel="noopener">
+              <svg class="store-icon" viewBox="0 0 512 512" aria-hidden="true">
+                <path fill="#34A853" d="M325.3 234.3L104.6 13.6c-5.4-5.4-12.7-8.4-20.3-8.4v502.6c7.6 0 14.9-3 20.3-8.4l220.7-220.7z"/>
+                <path fill="#FBBC04" d="M432.4 256l-107.1-61.8-120.7 120.7 120.7 120.7L432.4 256z"/>
+                <path fill="#EA4335" d="M325.3 277.7L104.6 498.4c-5.4 5.4-12.7 8.4-20.3 8.4l241-241z"/>
+                <path fill="#4285F4" d="M104.6 13.6l220.7 220.7-241-241c7.6 0 14.9 3 20.3 8.4z"/>
+              </svg>
+              Google Play
+            </a>
+
             <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
             <a class="btn" href="/privacy.html">Privacy</a>
             <a class="btn" href="/terms.html">Terms</a>
@@ -232,10 +250,15 @@
     <div class="wrap">
       <div class="section-title" id="products">Products</div>
 
-      <section class="grid" aria-label="Products">
+      <section class="grid">
         <article class="card">
           <h3>Mantramala</h3>
           <p>Daily mantra counter & timer—minimal, focused, and designed for practice.</p>
+          <p style="margin-top:10px;">
+            <a href="https://play.google.com/store/apps/details?id=com.mantramala.timer&hl=en-US" target="_blank">
+              Available on Google Play →
+            </a>
+          </p>
           <div class="meta">
             <span class="pill">Status: Live</span>
             <span class="pill">Android</span>
@@ -262,7 +285,7 @@
       </section>
 
       <div class="section-title">About</div>
-      <section class="about" aria-label="About">
+      <section class="about">
         <div class="card">
           <h3>Built with intention</h3>
           <p>
@@ -274,8 +297,6 @@
         <div class="card">
           <h3>Get in touch</h3>
           <p>
-            For partnerships, feedback, or press:
-            <br /><br />
             <a href="mailto:support@quietforgestudio.org">support@quietforgestudio.org</a>
           </p>
         </div>
@@ -297,4 +318,3 @@
   </script>
 </body>
 </html>
-```
