--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
         </article>
 
         <article class="card">
-          <h3>MantraRise</h3>
-          <p>Wake with mantra—gentle routines to start the day with clarity. (Coming soon)</p>
+          <h3>AI FaceCrop</h3>
+          <p>AI solution to face crop from group picture. (Coming soon)</p>
           <div class="meta">
             <span class="pill">Status: In progress</span>
             <span class="pill">Android / iOS</span>
