Refactor index.html for layout and style enhancements
Updated HTML structure and styles for improved layout and design consistency.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!doctype html>
 <html lang="en">
 <head>
@@ -28,6 +29,7 @@
 
     /* HERO */
     .hero {
+      position: relative;
       padding: 72px 0 56px;
       background:
         linear-gradient(180deg, rgba(11,12,15,0.35) 0%, rgba(11,12,15,0.85) 70%, #0b0c0f 100%),
@@ -44,6 +46,7 @@
       flex-wrap: wrap;
     }
 
+    /* Logo */
     .logo {
       width: 72px;
       height: 72px;
@@ -51,12 +54,13 @@
       overflow: hidden;
       border: 1px solid rgba(255,255,255,0.14);
       background: rgba(0,0,0,0.25);
+      flex: 0 0 auto;
     }
-
     .logo img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      display: block;
     }
 
     .badge {
@@ -68,30 +72,28 @@
       border-radius: 999px;
       font-size: 13px;
       color: #e7e2cf;
+      width: fit-content;
       background: rgba(0,0,0,0.28);
       backdrop-filter: blur(6px);
     }
-
-    .dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: #8ff0a4;
-    }
+    .dot { width: 7px; height: 7px; border-radius: 999px; background: #8ff0a4; display: inline-block; }
 
     h1 {
       font-size: 48px;
+      line-height: 1.06;
       margin: 10px 0 0;
-      color: #f2ead2;
       letter-spacing: -0.03em;
+      color: #f2ead2;
+      text-shadow: 0 10px 30px rgba(0,0,0,0.55);
     }
 
     .lead {
-      margin-top: 16px;
+      margin: 16px 0 0;
       font-size: 18px;
       line-height: 1.75;
       color: rgba(242,234,210,0.86);
       max-width: 62ch;
+      text-shadow: 0 10px 30px rgba(0,0,0,0.55);
     }
 
     /* CTA */
@@ -122,10 +124,9 @@
       border-color: #f2ead2;
     }
 
-    .store-icon {
-      width: 18px;
-      height: 18px;
-    }
+    .btn:hover { transform: translateY(-1px); transition: 120ms ease; }
+
+    .store-icon { width: 18px; height: 18px; display: inline-block; }
 
     /* CONTENT */
     .content { padding: 54px 0 72px; }
@@ -151,16 +152,16 @@
       background: rgba(255,255,255,0.02);
     }
 
-    .card h3 { margin: 0 0 6px; }
-    .card p { margin: 0; font-size: 15px; color: #c9cad4; }
+    .card h3 { margin: 0 0 6px; font-size: 18px; color: #e9e9ee; }
+    .card p { margin: 0; font-size: 15px; line-height: 1.7; color: #c9cad4; }
 
-    /* STATUS ROW — ONE LINE */
+    /* UPDATED: keep pills aligned on one line */
     .meta {
       margin-top: 12px;
       display: inline-flex;
       gap: 10px;
-      align-items: center;
       flex-wrap: nowrap;
+      align-items: center;
       white-space: nowrap;
       font-size: 12px;
       color: #9b9dac;
@@ -171,17 +172,14 @@
       border-radius: 999px;
       border: 1px solid #2a2c35;
       background: rgba(255,255,255,0.01);
-      line-height: 1;
     }
 
-    /* LIVE STATUS */
+    /* ADDED: green glowing live pill */
     .pill-live {
       color: #0b1f14;
-      background: rgba(52, 168, 83, 0.25);
-      border: 1px solid rgba(52, 168, 83, 0.55);
-      box-shadow:
-        0 0 8px rgba(52, 168, 83, 0.45),
-        0 0 18px rgba(52, 168, 83, 0.25);
+      background: rgba(52,168,83,0.25);
+      border: 1px solid rgba(52,168,83,0.55);
+      box-shadow: 0 0 8px rgba(52,168,83,0.45), 0 0 18px rgba(52,168,83,0.25);
       font-weight: 600;
     }
 
@@ -202,78 +200,131 @@
       border-top: 1px solid #2a2c35;
       display: flex;
       justify-content: space-between;
+      gap: 12px;
       flex-wrap: wrap;
       font-size: 13px;
       color: #9b9dac;
+    }
+
+    footer a { color: #c9cad4; border-bottom: 1px dotted #3a3d49; }
+
+    .card a {
+      color: #f2ead2;
+      border-bottom: 1px dotted #3a3d49;
     }
   </style>
 </head>
 
 <body>
-<header class="hero">
-  <div class="wrap">
-    <div class="top">
-      <div class="logo">
-        <img src="assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
-      </div>
+  <header class="hero">
+    <div class="wrap">
+      <div class="top">
+        <div class="logo">
+          <img src="assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
+        </div>
 
-      <div>
-        <span class="badge"><span class="dot"></span> Independent studio • Toronto</span>
-        <h1>Quiet Forge Studio</h1>
-        <p class="lead">We build calm, purposeful apps and tools.</p>
+        <div>
+          <span class="badge"><span class="dot"></span> Independent studio • Toronto</span>
+          <h1>Quiet Forge Studio</h1>
+          <p class="lead">
+            We build calm, purposeful apps and tools—crafted with clarity, simplicity, and respect for attention.
+          </p>
 
-        <div class="cta">
-          <a class="btn primary" href="#products">View products</a>
-          <a class="btn" href="https://play.google.com/store/apps/details?id=com.mantramala.timer" target="_blank">
-            Google Play
-          </a>
+          <div class="cta">
+            <a class="btn primary" href="#products">View products</a>
+
+            <a class="btn" href="https://play.google.com/store/apps/details?id=com.mantramala.timer&hl=en-US" target="_blank" rel="noopener">
+              <svg class="store-icon" viewBox="0 0 512 512" aria-hidden="true">
+                <path fill="#34A853" d="M325.3 234.3L104.6 13.6c-5.4-5.4-12.7-8.4-20.3-8.4v502.6c7.6 0 14.9-3 20.3-8.4l220.7-220.7z"/>
+                <path fill="#FBBC04" d="M432.4 256l-107.1-61.8-120.7 120.7 120.7 120.7L432.4 256z"/>
+                <path fill="#EA4335" d="M325.3 277.7L104.6 498.4c-5.4 5.4-12.7 8.4-20.3 8.4l241-241z"/>
+                <path fill="#4285F4" d="M104.6 13.6l220.7 220.7-241-241c7.6 0 14.9 3 20.3 8.4z"/>
+              </svg>
+              Google Play
+            </a>
+
+            <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
+            <a class="btn" href="/privacy.html">Privacy</a>
+            <a class="btn" href="/terms.html">Terms</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<main class="content">
-  <div class="wrap">
-    <div class="section-title" id="products">Products</div>
+  <main class="content">
+    <div class="wrap">
+      <div class="section-title" id="products">Products</div>
 
-    <section class="grid">
-      <article class="card">
-        <h3>Mantramala</h3>
-        <p>Daily mantra counter & timer.</p>
-        <div class="meta">
-          <span class="pill pill-live">Status: Live</span>
-          <span class="pill">Android</span>
+      <section class="grid">
+        <article class="card">
+          <h3>Mantramala</h3>
+          <p>Daily mantra counter & timer—minimal, focused, and designed for practice.</p>
+
+          <p style="margin-top:10px;">
+            <a href="https://play.google.com/store/apps/details?id=com.mantramala.timer&hl=en-US" target="_blank">
+              Available on Google Play →
+            </a>
+          </p>
+
+          <div class="meta">
+            <!-- UPDATED: make Live green + glowing -->
+            <span class="pill pill-live">Status: Live</span>
+            <span class="pill">Android</span>
+          </div>
+        </article>
+
+        <article class="card">
+          <h3>AI FaceCrop</h3>
+          <p>AI solution to face crop from group picture. (Coming soon)</p>
+          <div class="meta">
+            <span class="pill">Status: In progress</span>
+            <span class="pill">Android / iOS</span>
+          </div>
+        </article>
+
+        <article class="card">
+          <h3>Watch Faces</h3>
+          <p>Mechanical-inspired Pixel watch faces with a premium, restrained aesthetic. (Exploring)</p>
+          <div class="meta">
+            <span class="pill">Status: Exploring</span>
+            <span class="pill">Wear OS</span>
+          </div>
+        </article>
+      </section>
+
+      <div class="section-title">About</div>
+      <section class="about">
+        <div class="card">
+          <h3>Built with intention</h3>
+          <p>
+            Quiet Forge Studio is an independent product studio focused on simple tools that feel good to use.
+            We favor clarity over complexity, and quiet confidence over noise.
+          </p>
         </div>
-      </article>
 
-      <article class="card">
-        <h3>AI FaceCrop</h3>
-        <p>AI solution to face crop from group picture.</p>
-        <div class="meta">
-          <span class="pill">Status: In progress</span>
-          <span class="pill">Android / iOS</span>
+        <div class="card">
+          <h3>Get in touch</h3>
+          <p>
+            <a href="mailto:support@quietforgestudio.org">support@quietforgestudio.org</a>
+          </p>
         </div>
-      </article>
+      </section>
 
-      <article class="card">
-        <h3>Watch Faces</h3>
-        <p>Mechanical-inspired Pixel watch faces.</p>
-        <div class="meta">
-          <span class="pill">Status: Exploring</span>
-          <span class="pill">Wear OS</span>
-        </div>
-      </article>
-    </section>
+      <footer>
+        <span>© <span id="y"></span> Quiet Forge Studio</span>
+        <span>
+          <a href="/privacy.html">Privacy</a> ·
+          <a href="/terms.html">Terms</a> ·
+          <a href="mailto:support@quietforgestudio.org">Contact</a>
+        </span>
+      </footer>
+    </div>
+  </main>
 
-    <footer>
-      <span>© <span id="y"></span> Quiet Forge Studio</span>
-    </footer>
-  </div>
-</main>
-
-<script>
-  document.getElementById('y').textContent = new Date().getFullYear();
-</script>
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
+```
