Update Google Play Store link in index.html

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <div class="cta">
             <a class="btn primary" href="#products">View products</a>
 
-            <a class="btn" href="https://play.google.com/store/apps/details?id=com.mantramala.timer&hl=en-US" target="_blank" rel="noopener">
+            <a class="btn" href="https://play.google.com/store/apps/dev?id=5025783351476242242&hl=en-US" target="_blank" rel="noopener">
               <svg class="store-icon" viewBox="0 0 512 512" aria-hidden="true">
                 <path fill="#34A853" d="M325.3 234.3L104.6 13.6c-5.4-5.4-12.7-8.4-20.3-8.4v502.6c7.6 0 14.9-3 20.3-8.4l220.7-220.7z"/>
                 <path fill="#FBBC04" d="M432.4 256l-107.1-61.8-120.7 120.7 120.7 120.7L432.4 256z"/>
