--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="wrap">
       <div class="top">
         <div class="logo">
-          <img src="blob/main/assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
+          <img src="/assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
         </div>
 
         <div>
