--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
             <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
             <a class="btn" href="/privacy.html">Privacy</a>
             <a class="btn" href="/terms.html">Terms</a>
+            <a class="btn" href="/projects/golive_pocket.html">GoLivePocket</a>
           </div>
         </div>
       </div>
