--- a/projects/golive_pocket.html
+++ b/projects/golive_pocket.html
@@ -301,7 +301,7 @@
 
       <div class="hero">
         <div class="card">
-          <h1>Release Management React App</h1>
+          <h1>Release Management App</h1>
           <p class="subtitle">
             A complete <strong>mobile-responsive</strong> React application for planning and managing releases:
             projects, go-lives, readiness, on-call, vacations, red advisories, reminders — with smart conflict warnings.
