Change image sources in gallery to new paths
Updated image sources in the gallery to use new paths.

--- a/projects/golive_pocket.html
+++ b/projects/golive_pocket.html
@@ -440,22 +440,22 @@
         <div class="gallery">
           <!-- Replace src with your actual image files, e.g. /assets/projects/release-manager/01-disclaimer.png -->
           <a class="shot" href="#" onclick="return false;">
-            <img src="/assets/projects/my-next-project/mockup-01.png" alt="Mockup 01 - Compliance Disclaimer" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 01</strong><br/>Add: /assets/projects/my-next-project/mockup-01.png</div>';">
+            <img src="/assets/mockup-01.png" alt="Mockup 01 - Compliance Disclaimer" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 01</strong><br/>Add: /assets/projects/my-next-project/mockup-01.png</div>';">
             <div class="cap">Compliance Disclaimer</div>
           </a>
 
           <a class="shot" href="#" onclick="return false;">
-            <img src="/assets/projects/my-next-project/mockup-02.png" alt="Mockup 02 - Project List" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 02</strong><br/>Add: /assets/projects/my-next-project/mockup-02.png</div>';">
+            <img src="/assets/mockup-02.png" alt="Mockup 02 - Project List" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 02</strong><br/>Add: /assets/projects/my-next-project/mockup-02.png</div>';">
             <div class="cap">Project List (Home)</div>
           </a>
 
           <a class="shot" href="#" onclick="return false;">
-            <img src="/assets/projects/my-next-project/mockup-03.png" alt="Mockup 03 - Project Detail" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 03</strong><br/>Add: /assets/projects/my-next-project/mockup-03.png</div>';">
+            <img src="/assets/mockup-03.png" alt="Mockup 03 - Project Detail" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 03</strong><br/>Add: /assets/projects/my-next-project/mockup-03.png</div>';">
             <div class="cap">Project Detail</div>
           </a>
 
           <a class="shot" href="#" onclick="return false;">
-            <img src="/assets/projects/my-next-project/mockup-04.png" alt="Mockup 04 - Go-Live Form" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 04</strong><br/>Add: /assets/projects/my-next-project/mockup-04.png</div>';">
+            <img src="/assets/mockup-04.png" alt="Mockup 04 - Go-Live Form" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 04</strong><br/>Add: /assets/projects/my-next-project/mockup-04.png</div>';">
             <div class="cap">Go-Live Form</div>
           </a>
 
