--- a/projects/golive_pocket.html
+++ b/projects/golive_pocket.html
@@ -460,12 +460,12 @@
           </a>
 
           <a class="shot" href="#" onclick="return false;">
-            <img src="/assets/projects/my-next-project/mockup-05.png" alt="Mockup 05 - Checklist" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 05</strong><br/>Add: /assets/projects/my-next-project/mockup-05.png</div>';">
+            <img src="/assets/mockup-05.png" alt="Mockup 05 - Checklist" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 05</strong><br/>Add: /assets/projects/my-next-project/mockup-05.png</div>';">
             <div class="cap">Checklist View</div>
           </a>
 
           <a class="shot" href="#" onclick="return false;">
-            <img src="/assets/projects/my-next-project/mockup-06.png" alt="Mockup 06 - On-Call / Vacation / Advisory" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 06</strong><br/>Add: /assets/projects/my-next-project/mockup-06.png</div>';">
+            <img src="/assets/mockup-06.png" alt="Mockup 06 - On-Call / Vacation / Advisory" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 06</strong><br/>Add: /assets/projects/my-next-project/mockup-06.png</div>';">
             <div class="cap">Scheduling & Advisories</div>
           </a>
         </div>
