--- a/projects/golive_pocket.html
+++ b/projects/golive_pocket.html
@@ -469,7 +469,7 @@
             <div class="cap">Go-Live Form</div>
           </a>
                     <a class="shot" href="#" onclick="return false;">
-            <img src="/assets/Project deatils - Reminder view.png.png" alt="Mockup 04 - Go-Live Form" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 04</strong><br/>Add: /assets/projects/my-next-project/mockup-04.png</div>';">
+            <img src="/assets/Project deatils - Reminder view.png" alt="Mockup 04 - Go-Live Form" onerror="this.style.display='none'; this.parentElement.style.padding='28px'; this.parentElement.innerHTML='<div style=&quot;color: rgba(232,238,252,0.75);&quot;><strong>Mockup 04</strong><br/>Add: /assets/projects/my-next-project/mockup-04.png</div>';">
             <div class="cap">Go-Live Form</div>
           </a>
 
