--- a/index.html
+++ b/index.html
@@ -277,7 +277,14 @@
 
         <article class="card">
           <h3>AI FaceCrop</h3>
-          <p>AI solution to face crop from group picture. (Coming soon)</p>
+          <p>AI solution to face crop from group picture. (Beta Testing)</p>
+
+          <p style="margin-top:10px;">
+            <a href="https://play.google.com/store/apps/details?id=com.snapcontact.app" target="_blank">
+              Available on Google Play →
+            </a>
+          </p>
+          
           <div class="meta">
             <span class="pill">Status: In progress</span>
             <span class="pill">Android / iOS</span>
