--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </article>
 
         <article class="card">
-          <h3>AI FaceCrop</h3>
+          <h3>SnapContact</h3>
           <p>AI solution to face crop from group picture. (Beta Testing)</p>
 
           <p style="margin-top:10px;">
