--- a/index.html
+++ b/index.html
@@ -280,6 +280,12 @@
           <p>AI solution to face crop from group picture. (Beta Testing)</p>
 
           <p style="margin-top:10px;">
+            <a href="https://groups.google.com/g/quiet-forge-studio" target="_blank">
+               👉 Join the Beta Testing - Google Group first →
+            </a>
+          </p>
+
+          <p style="margin-top:10px;">
             <a href="https://play.google.com/store/apps/details?id=com.snapcontact.app" target="_blank">
               Available on Google Play →
             </a>
