--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
           <p style="margin-top:10px;">
             <a href="https://play.google.com/store/apps/details?id=com.mantramala.timer&hl=en-US" target="_blank">
-              Available on Google Play →
+             👉 Available on Google Play →
             </a>
           </p>
 
@@ -287,7 +287,7 @@
 
           <p style="margin-top:10px;">
             <a href="https://play.google.com/store/apps/details?id=com.snapcontact.app" target="_blank">
-              Available on Google Play →
+              👉 Available on Google Play →
             </a>
           </p>
           
